@@ -1,4 +1,8 @@
-2004-05-11	blytkerchan	start implementing list-based hash
+2004-05-11	blytkerchan
+add missing files..
+	* types.h: new file
+
+start implementing list-based hash
 	* hash.c: include libmemory headers
 	(hash_node_new): new function
 	(hash_node_free): ditto
